defer added to script on example.html

--- a/examples/vanila-web/index.html
+++ b/examples/vanila-web/index.html
@@ -24,7 +24,7 @@
 
   <script src="../../dist/pustaka.umd.js"></script>
 
-  <script>
+  <script defer>
     const container = document.getElementById('pustaka-container');
     const prevBtn = document.getElementById('prev-btn');
     const nextBtn = document.getElementById('next-btn');
